Attempting to use arrow keys to move an entity with Continuous Grab enabled when mouse would be off-screen causes undesirable results #36409

Closed
opened 2013-08-08 08:31:40 +02:00 by Devon Vitkovsky · 3 comments

%%%The summary describes the issue pretty well; attempting to use arrow keys to move an entity with Continuous Grab enabled when mouse would be off-screen causes undesirable results.

To reproduce the bug, open up any scene with any entity. Enable continuous grab under User Prefs > Input, then Grab it and move the mouse so far that it causes it to wrap around to the opposite end of the screen. Now if you press an arrow key, it continues moving in that same direction regardless of which key is hit.

I believe this is caused by Blender seeing the one-pixel movement as more than a single pixel since it's been wrapped around the screen.%%%

%%%The summary describes the issue pretty well; attempting to use arrow keys to move an entity with Continuous Grab enabled when mouse would be off-screen causes undesirable results. To reproduce the bug, open up any scene with any entity. Enable continuous grab under User Prefs > Input, then Grab it and move the mouse so far that it causes it to wrap around to the opposite end of the screen. Now if you press an arrow key, it continues moving in that same direction regardless of which key is hit. I believe this is caused by Blender seeing the one-pixel movement as more than a single pixel since it's been wrapped around the screen.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r59546.%%%

%%%fixed r59546.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36409
No description provided.