fix [#36409] Continuous Grab problem with arrow keys.